--- a/style.css
+++ b/style.css
@@ -1,87 +1,159 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
-:root {
-    --font-ubuntu: 'Ubuntu', monospace;
-    --color-border: #e5e5e5;
-}
-
-.font-ubuntu {
-    font: normal 500 16px var(--font-ubuntu);
-}
-
-#register,
-#login-form {
-    padding: 5% 0;
-    background: url("./src/img/background.png");
+body.bg_login {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    background: url(../img/background.jpg);
     background-size: cover;
 }
 
-#login-form {
-    padding: 10% 0;
+.container_login {
+    width: 400px;
+    max-width: 400px;
+    margin: 1rem;
+    padding: 2rem;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    background: #ffffff;
 }
 
-#register .upload-profile-image {
-    position: relative;
-    width: 10%;
-    margin-left: auto;
-    margin-right: auto;
-    transition: filter .8s ease;
+.container {
+    max-width: 90%;
+    margin: 1rem;
+    padding: -1rem;
+    background: #ffffff;
 }
 
-#register .upload-profile-image:hover {
-    filter: drop-shadow(1px 1px 22px #7584bb);
+.container,
+.form_input,
+.form_button {
+    font: 500 1rem 'Quicksand', sans-serif;
 }
 
-#upload-profile {
-    position: absolute;
-    top: 0;
-    z-index: 10;
-    width: 200px;
-    margin-top: 0px;
-    opacity: 0;
+.form--hidden {
+    display: none;
 }
 
-#upload-profile::-webkit-file-upload-button {
-    visibility: hidden;
+.form>*:first-child {
+    margin-top: 0;
 }
 
-#upload-profile::before {
-    content: ' ';
+.form>*:last-child {
+    margin-bottom: 0;
+}
+
+.form_title {
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.form_message {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.form_message-success {
+    color: #4bb544;
+}
+
+.message-error {
+    color: #cc3333;
+}
+
+.form_input-group {
+    margin-bottom: 1rem;
+}
+
+.form_input {
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid #dddddd;
+    outline: none;
+    background: #eeeeee;
+    transition: background 0.2s, border-color 0.2s;
+}
+
+.form_input:focus {
+    border-color: #307fa8;
+    background: #ffffff;
+}
+
+.form_input--error {
+    color: #cc3333;
+    border-color: #cc3333;
+}
+
+.form_input-error-message {
+    margin-top: 0.5rem;
+    font-size: 0.85rem;
+    color: #cc3333;
+}
+
+.form_button {
+    width: 100%;
+    padding: 1rem 2rem;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    outline: none;
+    cursor: pointer;
+    background: #307fa8;
+}
+
+.form_button:hover {
+    background: #266d92;
+}
+
+.form_button:active {
+    transform: scale(0.98);
+}
+
+.form_text {
+    text-align: center;
+}
+
+.form_link {
+    color: #252c6a;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.form_link:hover {
+    text-decoration: underline;
+}
+
+.header-panel ul {
+    background-color: #67abce;
+    list-style-type: none;
+    text-align: left;
+    overflow: hidden;
+    width: 100%;
+    display: flexbox;
+}
+
+.header-panel li {
+    color: white;
     display: inline-block;
     width: 200px;
-    height: 200px;
-    cursor: pointer;
-    border-radius: 50%;
+    height: auto;
+    line-height: 50px;
+    outline-width: 100px;
+    margin-left: 50px;
+    text-align: center;
 }
 
-#register .upload-profile-image .camera-icon {
-    position: absolute;
-    top: 70px;
-    width: 60px !important;
-    filter: invert(30%) !important;
+.header-panel a {
+    text-decoration: none;
+    color: #fff;
+    display: block;
 }
 
-#register .upload-profile-image:hover .camera-icon {
-    filter: invert(100%) !important;
-}
-
-#reg-form input[type='text'],
-#reg-form input[type='email'],
-#reg-form input[type='password'],
-#log-form input[type='text'],
-#log-form input[type='email'],
-#log-form input[type='password'] {
-    border: none;
-    border-radius: unset;
-    border-bottom: 1px solid var(--color-border);
-    font-family: var(--font-ubuntu);
-}
-
-#reg-form input[type='text'],
-#reg-form input[type='email'],
-#reg-form input[type='password'],
-#log-form input[type='text'],
-#log-form input[type='email'],
-#log-form input[type='password'] {
-    outline: none;
-    box-shadow: none;
+.col-8 {
+    padding-left: 0.5cm;
 }
